# learn-yew-in-one-project

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  main.rs
src/components/: mod.rs  movie_card.rs  navbar.rs
src/contexts/: mod.rs  movie_context.rs
src/css/: favorites.css  index.css  movie_card.css
src/pages/: favorites.rs  home.rs  mod.rs
src/services/: mod.rs
