[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-console = "0.3.0"
gloo-dialogs = "0.2.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
uri_encode = "1.0.4"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["HtmlInputElement"] }
yew = { version = "0.22.0", features = ["csr", "serde"] }
yew-router = "0.19.0"
